--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-first-react-app</title>
+    <meta name="description" content="Discover trending movies and search for your favorites." />
+    <link rel="icon" type="image/x-icon" href="/logo.png" />
+    <title>Movies App</title>
   </head>
   <body>
     <div id="root"></div>
